# Django_iOS_ecommerce

./: .gitignore  README.md  coolsms.py  pyproject.toml  requirements.txt
app/: crawler.py
app/config/: settings.py  urls.py
app/config/settings/: _base.py  develop.py  production.py
app/kurly/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/kurly/migrations/: 0001_initial.py  0002_auto_20200402_2136.py  0002_auto_20200413_1633.py  0002_order_ordered.py  0003_auto_20200406_1432.py  0003_orderproduct_created_at.py  0004_auto_20200406_1702.py  0004_auto_20200416_1705.py  0005_auto_20200406_1719.py  0005_auto_20200406_2155.py  0005_auto_20200425_2357.py  0006_auto_20200406_2009.py
app/members/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200323_0231.py  0002_auto_20200330_1435.py  0002_auto_20200403_1249.py  0002_mobile_authenticated.py  0003_mobile_created_at.py
app/utils/drf/: coolsms.py  excepts.py  serializerfields.py  serializers.py
